circt-bc260129-00001374/origin/error.log
<stdin>:3:10: error: failed to legalize operation 'sim.fmt.literal'
    %0 = sim.fmt.literal "Error: Assertion failed: x="
         ^
<stdin>:3:10: note: see current operation: %8 = "sim.fmt.literal"() <{literal = "Error: Assertion failed: x="}> : () -> !sim.fstring
